canon-demo/k8s/overlays/gke/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canon-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "canon-staging-ip"
    networking.gke.io/managed-certificates: "canon-staging-cert"
    networking.gke.io/v1beta1.FrontendConfig: "canon-frontend-config"
    cloud.google.com/ingress-allow-list: "2a00:23ee:1d10:675a:b887:e221:fdce:6ae4/128"
spec:
  rules:
    - host: canon-staging.mopjones.com
      http:
        paths:
          - path: /sessions
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /fleet
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /cargo
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /stations
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /ships
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /events
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /replay
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /navigation
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /supply
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
